--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "polymer-3-first-element",
-  "version": "3.0.0-pre.12",
+  "name": "login-button",
+  "version": "1.0",
   "flat": true,
-  "description": "Build your first element with Polymer 3.0!",
+  "description": "to encapsulate the login button for the Oauth functionality of Google.",
   "main": "index.html",
-  "repository": "https://github.com/PolymerLabs/polymer-3-first-element.git",
-  "author": "The Polymer Project Authors",
-  "license": "BSD-3-Clause",
+  "repository": "https://github.com/CarlosSantoyo/login-button.git",
+  "author": "Charly Santoyo",
+  "license": "",
   "dependencies": {
-    "@polymer/iron-icon": "^3.0.0-pre.12",
-    "@polymer/iron-icons": "^3.0.0-pre.12",
     "@polymer/polymer": "^3.0.0-pre.12",
     "@webcomponents/webcomponentsjs": "^1.0.20"
   },
